--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,39 +7,31 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: emartdbpass
-      MYSQL_DATABASE: book
+      MYSQL_DATABASE: books
     volumes:
-      msqldat: /var/lib/mysql
-    networks:
-      - connection
-  
+      - msqldat:/var/lib/mysql
+
   mongodb:
     image: mongo
     container_name: emongo
     environment:
       MONGO_INITDB_DATABASE: epoc
     volumes:
-      mogoda: /data/db
-    networks:
-      - connection
+      - mogoda:/data/db
     ports:
-      - "2000:2000"
+      - "27017:27017"
   nginx:
     build:
       context: ./nginx
-    networks:
-      - connection
+    container_name: nginx
     ports:
       - "80:80"
-    depends_on:
-  
+    restart: always
 
   clientapp:
-    build: 
+    build:
       context: ./client
     container_name: client
-    networks:
-      - connection
     ports:
       - "4200:4200"
     depends_on:
@@ -49,28 +41,22 @@ services:
   javaapi:
     build:
       context: ./javaapi
-    container_name: javaapi
-    ports:
-      - "5000:5000"
-    restart: always
-    networks:
-      - connection
-    depends_on:
-      - mysql
-  
-  nodeapi:
-    build: 
-      context: ./nodeapi
-    container_name: nodeapi
+    container_name: webapi
     ports:
       - "9000:9000"
     restart: always
-    networks:
-      - connection
+    depends_on:
+      - mysql
+
+  nodeapi:
+    build:
+      context: ./nodeapi
+    container_name: api
+    ports:
+      - "5000:5000"
+    restart: always
     depends_on:
       - mongodb
-networks:
-  connection:
 volumes:
   msqldat:
   mogoda:
