--- a/nodeapi/Dockerfile
+++ b/nodeapi/Dockerfile
@@ -1,8 +1,12 @@
-FROM node:14 AS First_image
+FROM node:14 AS FIRST_IMAGE
 WORKDIR /app
 COPY ./ ./nodeapi/
 RUN cd nodeapi && npm install
-FROM node:14 
+
+FROM node:14
 WORKDIR /app
-COPY --from=First_image /app/nodeapi/ /app/
+
+
+COPY --from=FIRST_IMAGE /app/nodeapi/ /app/
+EXPOSE 5000
 CMD [ "/bin/sh", "-c", "cd /app/ && npm start" ]
